# steam-vdf-parser

./: Cargo.toml  README.md
examples/: appid_to_name.rs  compactify_vdf.rs  dump_vdf.rs  print.rs  test_parse_real.rs  verify_compactified.rs
src/: error.rs  lib.rs  value.rs
src/binary/: mod.rs  parser.rs  types.rs
src/text/: parser.rs
src/value/: hasher.rs  impls.rs  mod.rs  tests.rs  types.rs
tests/: real_files.rs
