[package]
name = "steam-vdf-parser"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Zero-copy parser for Steam's VDF (Valve Data Format) files"
readme = "README.md"
keywords = ["vdf", "steam", "parser", "binary", "valve"]
categories = ["parser-implementations", "data-structures"]

[dependencies]
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
winnow = { version = "0.7.14", default-features = false, features = ["alloc", "simd"] }
hashbrown = "0.15"
